add scatter all function demo

--- a/eosc_scatter/src/html/index.html
+++ b/eosc_scatter/src/html/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div id="app">
-                <router-view></router-view>
+            <index_view></index_view>
         </div>
     </body>
 </html>
